classDiagram
direction TB

%% ─── MODELOS ───────────────────────────────────────────────

class Product {
    <<interface>>
    +number id
    +string name
    +number price
    +string imageUrl
    +string description
    +string category
    +boolean inStock
}

class PurchaseItem {
    <<interface>>
    +number producto_id
    +string nombre_producto
    +string categoria
    +number cantidad
    +number precio_unitario
    +number importe
}

class PurchaseOrder {
    <<interface>>
    +number id
    +string folio
    +string fecha
    +string paypal_orden_id
    +string paypal_estado
    +number subtotal
    +number iva
    +number total
    +PurchaseItem[] items
}

class CartItem {
    <<interface>>
    +Product product
    +number quantity
}

class User {
    <<interface>>
    +number id_usuario
    +string email
    +string nombre
    +string apellido
    +string telefono
    +string created_at
}

class UserRegistrationData {
    <<interface>>
    +string email
    +string nombre
    +string apellido
    +string telefono
}

class Ticket {
    <<interface>>
    +number id_ticket
    +string orderId
    +number|null id_usuario
    +number|null pedido_id
    +string fecha_compra
    +string metodo_pago
    +number subtotal
    +number impuestos
    +number total
    +string estado
    +string created_at
}

class TicketDetails {
    <<interface>>
    +string nombre
    +string apellido
    +string email
    +string telefono
    +Array productos
}

class TicketCreateData {
    <<interface>>
    +string orderId
    +number|null id_usuario
    +number|null pedido_id
    +string metodo_pago
    +number subtotal
    +number impuestos
    +number total
    +string estado
}

class PedidoPayload {
    <<interface>>
    +string folio
    +string paypalOrderId
    +string paypalEstado
    +number subtotal
    +number iva
    +number total
    +Array items
}

class ProductAddEvent {
    <<interface>>
    +Product product
    +number quantity
}

%% ─── SERVICIOS ─────────────────────────────────────────────

class ProductsService {
    <<service>>
    -HttpClient http
    -string apiUrl
    +getProducts() Observable
    +getAll() Observable
}

class CarritoService {
    <<service>>
    -Signal productosSignal
    +Computed productos
    +Computed groupedItems
    +Computed itemCount
    +Computed subtotal
    +Computed impuestos
    +Computed totalConImpuestos
    +Computed total
    +Computed carrito
    +agregar(product, cantidad) void
    +quitar(id) void
    +removeAll(id) void
    +vaciar() void
    +descargarReciboXML(folio, paypalOrderId) void
    +exportarXML() void
}

class SearchService {
    <<service>>
    -Signal searchSignal
    -Signal categoryFilterSignal
    +Readonly search
    +Readonly categoryFilter
    +setSearch(query) void
    +setCategoryFilter(category) void
    +clearCategoryFilter() void
}

class PaypalService {
    <<service>>
    -HttpClient http
    -string apiUrl
    +crearOrden(payload) Observable
    +capturarOrden(orderId) Observable
    +guardarPedido(payload) Observable
}

class HistorialComprasService {
    <<service>>
    -HttpClient http
    -string apiUrl
    -Signal comprasSignal
    +Readonly compras
    +Signal loading
    +Signal error
    +obtenerCompras() Promise
    +obtenerCompraPorId(id) Promise
    +guardarCompra(compra) Promise
    +cargarComprasSimuladas() Promise
    +limpiarCompras() void
}

class UserService {
    <<service>>
    -HttpClient http
    -string apiUrl
    +Signal usuario
    +registrarUsuario(data) Observable
    +loginUsuario(data) Observable
    +obtenerUsuario(id) Observable
    +setUsuario(usuario) void
    +clearUsuario() void
    +getUsuarioActual() User
}

class TicketService {
    <<service>>
    -HttpClient http
    -string apiUrl
    +generarTicket(data) Observable
    +obtenerTicket(id) Observable
    +obtenerTicketPorOrden(orderId) Observable
    +obtenerTicketsPorUsuario(userId) Observable
    +obtenerTicketConDetalles(id) Observable
    +obtenerReporteCompras(userId) Observable
}

%% ─── COMPONENTES ────────────────────────────────────────────

class Home {
    <<component>>
    +Signal showModal
    +Signal modalProductName
    +ngOnInit() void
    +ngAfterViewInit() void
    +filterByCategory(category) void
    +filterByCategoryAndScroll(event, category) void
    +scrollToCatalog(event) void
    +onNavigate() void
    +onSubscribe(event) void
}

class Navbar {
    <<component>>
    +Signal searchQuery
    +onSearch() void
    +clearSearch() void
    +goHome() void
    +goToCatalog() void
    +goToHistorial() void
}

class Footer {
    <<component>>
    +goHome() void
    +goToCatalog() void
    +goToHistorial() void
}

class Catalogo {
    <<component>>
    +Signal products
    +Signal allProducts
    +Signal selectedCategory
    +Signal minPrice
    +Signal maxPrice
    +Signal onlyInStock
    +Signal sortOption
    +Signal showModal
    +Signal modalProductName
    +Computed filteredProducts
    +Computed categories
    +Computed inStockCount
    +ngOnInit() void
    +agregar(event) void
    +onCategoryChange(category) void
    +getCategoryCount(category) number
    +clearAllFilters() void
}

class ProductCard {
    <<component>>
    +Product product
    +EventEmitter add
    +Signal quantity
    +incrementQuantity() void
    +decrementQuantity() void
    +onAdd() void
}

class Producto {
    <<component>>
}

class CarritoComponent {
    <<component>>
    +Computed groupedItems
    +Computed subtotal
    +Computed impuestos
    +Computed totalConImpuestos
    +Signal mensaje
    +Signal pagoExitoso
    +Signal folioPago
    +Signal cargandoPaypal
    +ngAfterViewInit() void
    +ngOnDestroy() void
    +agregar(producto) void
    +quitar(id) void
    +removeAll(id) void
    +vaciar() void
    +exportarXML() void
    -guardarPedidoEnBD(folio, orderId, capture) Promise
}

class Checkout {
    <<component>>
    +Computed carrito
    +Computed total
    +Computed subtotal
    +Computed impuestos
    +Signal mensaje
    +Signal mostrarTicket
    +Signal ticketGenerado
    +ngAfterViewInit() void
    +descargarTicketXML() void
    +descargarTicketPDF() void
}

class LoginComponent {
    <<component>>
    +User usuario
    +string email
    +string nombre
    +string apellido
    +string telefono
    +boolean modoRegistro
    +string mensaje
    +boolean cargando
    +submit() Promise
    +alternarModo() void
    +limpiar() void
    +cerrarSesion() void
}

class HistorialCompras {
    <<component>>
    +Readonly compras
    +Readonly loading
    +Readonly error
    +ngOnInit() void
    +ngAfterViewInit() void
    +ngOnDestroy() void
    +cargarCompras() void
    +formatearFecha(fecha) string
    +formatearMoneda(valor) string
    +obtenerEstadoClase(estado) string
    +obtenerEstadoTexto(estado) string
}

class DetalleCompra {
    <<component>>
    +PurchaseOrder compra
    +Readonly loading
    +Readonly error
    +ngOnInit() void
    +ngAfterViewInit() void
    +cargarCompra(id) void
    +formatearFecha(fecha) string
    +formatearMoneda(valor) string
    +obtenerEstadoClase(estado) string
    +obtenerEstadoTexto(estado) string
}

class TicketComponent {
    <<component>>
    +Signal ticket
    +Signal usuario
    +Signal cargando
    +Signal error
    +boolean navigatorShare
    +ngOnInit() void
    +cargarTicket() Promise
    +cerrarTicket() void
    +descargarPDF() void
    +compartirTicket() void
    +formatearFecha(fecha) string
}

class Contactos {
    <<component>>
    +object formData
    +Signal showSuccess
    +ngAfterViewInit() void
    +onSubmit(event) void
}

class Privacidad {
    <<component>>
    +ngAfterViewInit() void
}

%% ─── RELACIONES MODELOS ──────────────────────────────────────
PurchaseOrder o-- PurchaseItem : contiene
TicketDetails --|> Ticket : extiende
CartItem --> Product : referencia
UserRegistrationData ..> User : crea

%% ─── RELACIONES SERVICIOS → MODELOS ─────────────────────────
ProductsService ..> Product : retorna
CarritoService ..> Product : usa
CarritoService ..> CartItem : crea
PaypalService ..> PedidoPayload : recibe
HistorialComprasService ..> PurchaseOrder : retorna
UserService ..> User : retorna
UserService ..> UserRegistrationData : recibe
TicketService ..> Ticket : retorna
TicketService ..> TicketDetails : retorna
TicketService ..> TicketCreateData : recibe

%% ─── RELACIONES COMPONENTES → SERVICIOS ─────────────────────
Catalogo --> ProductsService : inyecta
Catalogo --> CarritoService : inyecta
Catalogo --> SearchService : inyecta
Catalogo --> ProductCard : usa

Home --> SearchService : inyecta
Home --> CarritoService : inyecta

Navbar --> CarritoService : inyecta
Navbar --> SearchService : inyecta

CarritoComponent --> CarritoService : inyecta
CarritoComponent --> PaypalService : inyecta
CarritoComponent --> TicketService : inyecta
CarritoComponent --> UserService : inyecta

Checkout --> CarritoService : inyecta
Checkout --> PaypalService : inyecta
Checkout --> HistorialComprasService : inyecta
Checkout --> TicketService : inyecta
Checkout --> UserService : inyecta

HistorialCompras --> HistorialComprasService : inyecta
DetalleCompra --> HistorialComprasService : inyecta

LoginComponent --> UserService : inyecta

TicketComponent --> TicketService : inyecta

%% ─── RELACIONES COMPONENTES → MODELOS ───────────────────────
ProductCard ..> Product : recibe
ProductCard ..> ProductAddEvent : emite
HistorialCompras ..> PurchaseOrder : muestra
DetalleCompra ..> PurchaseOrder : muestra
LoginComponent ..> User : usa
TicketComponent ..> TicketDetails : muestra
